{
    "name": "MobileInput",
    "maps": [
        {
            "name": "Touch",
            "id": "8dac653f-faae-4088-b328-2f4c982a9ce0",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "d48d2dbb-4abb-47f1-90f7-58ae93cf01d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondTouch",
                    "type": "Button",
                    "id": "81b0515a-bac8-47e6-8864-9ac1b63163a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPostion",
                    "type": "Value",
                    "id": "c7e4150e-64b4-41a2-b26f-e208cafcdc8f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "Value",
                    "id": "74205751-1a19-4102-b37a-be85d2b1d2d5",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondPostion",
                    "type": "Value",
                    "id": "3c0c8994-c64a-434f-a1d3-5a1a7f4ffd2d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondDelta",
                    "type": "Value",
                    "id": "f06608ea-c62e-4bcc-bb9f-be6b836a9010",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstPostion",
                    "type": "Value",
                    "id": "dc542ede-9246-4730-8f3f-464d243f7595",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstDelta",
                    "type": "Value",
                    "id": "76768ecf-9e74-428b-bf71-b0e744c7a309",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38e1ce74-86e3-4c10-be52-2305ab8fcf4d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed6741b3-b0f3-423e-845f-c234a3831f49",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPostion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "802e7d7d-ef73-45dd-94b7-59d9e2159fd9",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "042efdac-045b-402f-8082-e62c4df4df5b",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b6ef664-17e6-4bef-a65a-4a68764754df",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondPostion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "154920ba-4e6d-460c-aa2d-1e0c613aa10b",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19d6d4de-71e2-4255-9300-8b5c579cdbef",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstPostion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6333ec7-fca4-4755-8247-ad48bfd6a9d0",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}